# R-thinker

./: .gitignore  README.md  config.example.json  main_realtime_chess.py  main_realtime_common.py  main_realtime_maze.py  pyproject.toml  requirements-legacy.txt  requirements.txt
Agent/: agent_config.json  available_agents.py
Agent/R_Thinker/: __init__.py  direct_execute_module.py  fast_think_module.py  slow_think_module.py  think_agent.py
Agent/R_thinker_variants/: fast_only_agent.py  slow_only_agent.py  think_agent_ablation_variants.py
Agent/human_agents/: human_agent_chess.py  human_agent_maze.py
Agent/llm_base_agents/: llm_agent.py
Agent/llm_frame_agents/: coding_agent.py  cot_agent.py  memory_llm_agent.py  reflexion_agent.py
Agent/prompt/: Chess_coding.txt  Chess_cot_llm_agent_prompt.txt  Chess_fast_think_module_prompt.txt  Chess_llm_agent_prompt.txt  Chess_memory_llm_agent_prompt.txt  Chess_reflexion_llm_agent_prompt.txt  Chess_slow_think_module_prompt.txt  Maze_coding.txt  Maze_cot_llm_agent_prompt.txt  Maze_fast_think_module_prompt.txt  Maze_llm_agent_prompt.txt  Maze_memory_llm_agent_prompt.txt  Maze_reflexion_llm_agent_prompt.txt  Maze_slow_think_module_prompt.txt
Agent/rule_agents/: random_agent_chess.py  (+3 more)
Env/: __init__.py
Tools/: capture_frontend_gif.py  capture_frontend_view.py  record_frontend_experiment.py
docs/: RESTORED_FROM_HISTORY.md  legacy_rthinker_README.md
experiments/: README.md  exp1_main_baselines.py  exp2_ablation.py  exp3_round_robin.py  exp4_rule_delay.py  exp5_time_budget.py  exp6_env_sweep.py  experiment_core.py
(+33 files in other folders)
